<resources>
    <string name="app_name" translatable="false">Fiventure</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="next">Next</string>
    <string name="ob_t_1">Manage Work Schedule!</string>
    <string name="ob_t_2">Spend management!</string>
    <string name="ob_t_3">Time is Gold and Silver!</string>
    <string name="ob_d_1">Work with Rules</string>
    <string name="ob_d_2">Helps you manage your spending well!</string>
    <string name="ob_d_3">Manage it well to have a quality life!</string>
    <string name="skip">Skip</string>
    <string name="please_tell_me_who_you_are">Please tell me who you are</string>
    <string name="login">Login</string>
    <string name="example_email_gmail_dot_com">example_email@gmail.com</string>
    <string name="or_login_with">Or Login With</string>
    <string name="password">password</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="register_account">Register Account</string>
    <string name="register_an_account_to_continue">Register an account to continue!</string>
    <string name="register">Register</string>
    <string name="your_name_here">your_name_here</string>
    <string name="term_of_policy">Term of Policy</string>
    <string name="this_field_cannot_be_left_blank">This field cannot be left blank!</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="password_minimum_six_characters">Password minimum 8 characters!</string>
    <string name="email_already_active">Email already active!</string>
    <string name="register_success">Register success!</string>
    <string name="account_incorrect">Account incorrect!</string>
    <string name="hello">Hello</string>
    <string name="home">Home</string>
    <string name="chart">Chart</string>
    <string name="manage">Manage</string>
    <string name="plan">Plan</string>
    <string name="account">Account</string>
    <string name="account_balance">Account Balance</string>
    <string name="activities">Activities</string>
    <string name="earning">Earning</string>
    <string name="cost_management">Cost management</string>
    <string name="real_income">Real income</string>
    <string name="manage_your_real_income">Manage your real income</string>
    <string name="actual_costs">Actual costs</string>
    <string name="manage_your_actual_expenses">Manage your actual expenses</string>
    <string name="expected_income">Expected income</string>
    <string name="manage_your_expected_income_for_the_month">Manage your expected income for the month</string>
    <string name="estimated_cost">Estimated cost</string>
    <string name="manage_expected_expenses_for_the_month">Manage expected expenses for the month</string>
    <string name="revenue_source">Revenue source</string>
    <string name="list_of_revenue">List of revenue</string>
    <string name="service">Service</string>
    <string name="add_more">Add more</string>
    <string name="note_title">Note Title</string>
    <string name="information_cannot_be_left_blank">Information cannot be left blank!</string>
    <string name="_0_vnd">0 VND</string>
    <string name="time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_categories">Add categories</string>
    <string name="category_name">Category name</string>
    <string name="this_is_sample_item">This is sample item</string>
    <string name="category_not_selected">No categories have been selected yet!</string>
    <string name="cost_source">Cost source</string>
    <string name="cost_list">Cost list</string>
    <string name="cost">Cost</string>
    <string name="revenue">Revenue</string>
    <string name="chart_information">Comparison chart of income and expenditure (current and expected) for the month.</string>
    <string name="amount">Amount</string>
    <string name="balance_fluctuations">Balance fluctuations</string>
    <string name="amount_params">Amount %s</string>
    <string name="transaction_amount_params">Transaction amount: +%dVND</string>
    <string name="transaction_amount_params_2">Transaction amount: -%dVND</string>
    <string name="balance_params">Balance: %sVND</string>
    <string name="notifications">Notifications</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="logout">Logout</string>
    <string name="update_infor">Update Infor</string>
    <string name="sign_in_again">Please Login Again!</string>
    <string name="this_action_may_take_several_seconds">This action may take several seconds</string>
    <string name="it_is_time_to_spend_money">It\'s time to spend the money on the plan you made in advance!</string>
    <string name="remind">Remind</string>
    <string name="warning">Daily spending alerts</string>
    <string name="warning_des">The current day\'s balance is negative. Take control of this emergency!</string>
    <string name="language">Language</string>
    <string name="vietnamese">VietNamese</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="portugal">Portugal</string>
    <string name="record_sample_1">Record Sample 1</string>
    <string name="notification_sample_1">Notification Sample 1</string>
    <string name="content_sample_1">Content Sample 1</string>
    <string name="please_allow_us_to_access_your_camera_and_take_picture">Please allow us to access your camera and take picture.</string>
    <string name="message_denied_camera_permission">You need to grant camera permission to use this feature!</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="update_categories">Update Categories</string>
    <string name="update">Update</string>
    <string name="choose_type_filter">Choose Type Filter Record</string>
    <string name="single_date">Single Date</string>
    <string name="range_date">Range Date</string>
    <string name="title_range_date">Select Range Date</string>
    <string name="news">News</string>
    <string name="breaking_news">Breaking News</string>
    <string name="recommendation">Recommendation</string>
    <string name="post_horizontal_title_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="post_horizontal_title_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="post_horizontal_title_3">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="post_horizontal_title_4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="post_horizontal_title_5">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="post_horizontal_content_1">Quisque tincidunt orci ac turpis vehicula, nec varius odio faucibus. Duis ac libero a magna scelerisque aliquam et non diam. Maecenas at eros semper, mattis eros ornare, pharetra neque. Donec a nisl imperdiet, facilisis tellus et, aliquam arcu. Donec et euismod nunc, ac vestibulum tellus. Ut sit amet pretium ipsum, feugiat ornare dolor. Etiam iaculis nibh id diam facilisis blandit.\n\nVestibulum mattis congue eros in vestibulum. In maximus congue bibendum. Duis quis sagittis sapien, vel ultrices arcu. Vestibulum a turpis laoreet, finibus risus ut, viverra est. Aliquam nulla ligula, congue ac maximus id, condimentum nec metus. Nulla sagittis risus elit, eget interdum tortor convallis vitae. Suspendisse dignissim finibus purus ut fermentum. Quisque ut tristique magna. Sed fermentum venenatis dignissim. Phasellus id rhoncus tellus, ac sollicitudin erat. Praesent sagittis dignissim lobortis. Ut eget auctor leo. Mauris blandit viverra urna ac pulvinar. Vestibulum ligula justo, commodo ut sapien quis, fringilla accumsan lacus. Etiam laoreet a quam nec pellentesque.</string>
    <string name="post_horizontal_content_2">Quisque tincidunt orci ac turpis vehicula, nec varius odio faucibus. Duis ac libero a magna scelerisque aliquam et non diam. Maecenas at eros semper, mattis eros ornare, pharetra neque. Donec a nisl imperdiet, facilisis tellus et, aliquam arcu. Donec et euismod nunc, ac vestibulum tellus. Ut sit amet pretium ipsum, feugiat ornare dolor. Etiam iaculis nibh id diam facilisis blandit.\n\nVestibulum mattis congue eros in vestibulum. In maximus congue bibendum. Duis quis sagittis sapien, vel ultrices arcu. Vestibulum a turpis laoreet, finibus risus ut, viverra est. Aliquam nulla ligula, congue ac maximus id, condimentum nec metus. Nulla sagittis risus elit, eget interdum tortor convallis vitae. Suspendisse dignissim finibus purus ut fermentum. Quisque ut tristique magna. Sed fermentum venenatis dignissim. Phasellus id rhoncus tellus, ac sollicitudin erat. Praesent sagittis dignissim lobortis. Ut eget auctor leo. Mauris blandit viverra urna ac pulvinar. Vestibulum ligula justo, commodo ut sapien quis, fringilla accumsan lacus. Etiam laoreet a quam nec pellentesque.</string>
    <string name="post_horizontal_content_3">Quisque tincidunt orci ac turpis vehicula, nec varius odio faucibus. Duis ac libero a magna scelerisque aliquam et non diam. Maecenas at eros semper, mattis eros ornare, pharetra neque. Donec a nisl imperdiet, facilisis tellus et, aliquam arcu. Donec et euismod nunc, ac vestibulum tellus. Ut sit amet pretium ipsum, feugiat ornare dolor. Etiam iaculis nibh id diam facilisis blandit.\n\nVestibulum mattis congue eros in vestibulum. In maximus congue bibendum. Duis quis sagittis sapien, vel ultrices arcu. Vestibulum a turpis laoreet, finibus risus ut, viverra est. Aliquam nulla ligula, congue ac maximus id, condimentum nec metus. Nulla sagittis risus elit, eget interdum tortor convallis vitae. Suspendisse dignissim finibus purus ut fermentum. Quisque ut tristique magna. Sed fermentum venenatis dignissim. Phasellus id rhoncus tellus, ac sollicitudin erat. Praesent sagittis dignissim lobortis. Ut eget auctor leo. Mauris blandit viverra urna ac pulvinar. Vestibulum ligula justo, commodo ut sapien quis, fringilla accumsan lacus. Etiam laoreet a quam nec pellentesque.</string>
    <string name="post_horizontal_content_4">Quisque tincidunt orci ac turpis vehicula, nec varius odio faucibus. Duis ac libero a magna scelerisque aliquam et non diam. Maecenas at eros semper, mattis eros ornare, pharetra neque. Donec a nisl imperdiet, facilisis tellus et, aliquam arcu. Donec et euismod nunc, ac vestibulum tellus. Ut sit amet pretium ipsum, feugiat ornare dolor. Etiam iaculis nibh id diam facilisis blandit.\n\nVestibulum mattis congue eros in vestibulum. In maximus congue bibendum. Duis quis sagittis sapien, vel ultrices arcu. Vestibulum a turpis laoreet, finibus risus ut, viverra est. Aliquam nulla ligula, congue ac maximus id, condimentum nec metus. Nulla sagittis risus elit, eget interdum tortor convallis vitae. Suspendisse dignissim finibus purus ut fermentum. Quisque ut tristique magna. Sed fermentum venenatis dignissim. Phasellus id rhoncus tellus, ac sollicitudin erat. Praesent sagittis dignissim lobortis. Ut eget auctor leo. Mauris blandit viverra urna ac pulvinar. Vestibulum ligula justo, commodo ut sapien quis, fringilla accumsan lacus. Etiam laoreet a quam nec pellentesque.</string>
</resources>