<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_act">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/layoutContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/viewSupported"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/viewSupported"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/divider"
            app:layout_constraintBottom_toTopOf="@id/layoutBottom" />

        <LinearLayout
            android:id="@+id/layoutBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:id="@+id/buttonTab1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_2sdp"
                android:paddingVertical="@dimen/_12sdp"
                tools:ignore="UseCompoundDrawables,UselessLeaf,UselessParent">

                <ImageView
                    android:id="@+id/iconTab1"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/state_tab_home" />

                <TextView
                    android:id="@+id/textTab1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_semi_bold"
                    android:text="@string/home"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonTab2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_2sdp"
                android:paddingVertical="@dimen/_12sdp"
                tools:ignore="UseCompoundDrawables,UselessLeaf,UselessParent">

                <ImageView
                    android:id="@+id/iconTab2"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/state_tab_chart" />

                <TextView
                    android:id="@+id/textTab2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_semi_bold"
                    android:text="@string/chart"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonTab3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_2sdp"
                android:paddingVertical="@dimen/_12sdp"
                tools:ignore="UseCompoundDrawables,UselessLeaf,UselessParent">

                <ImageView
                    android:id="@+id/iconTab3"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/state_tab_manage" />

                <TextView
                    android:id="@+id/textTab3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_semi_bold"
                    android:text="@string/manage"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonTab4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_2sdp"
                android:paddingVertical="@dimen/_12sdp"
                tools:ignore="UseCompoundDrawables,UselessLeaf,UselessParent">

                <ImageView
                    android:id="@+id/iconTab4"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/state_tab_account" />

                <TextView
                    android:id="@+id/textTab4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_semi_bold"
                    android:text="@string/account"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonTab5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_2sdp"
                android:paddingVertical="@dimen/_12sdp"
                tools:ignore="UseCompoundDrawables,UselessLeaf,UselessParent">

                <ImageView
                    android:id="@+id/iconTab5"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/state_tab_news" />

                <TextView
                    android:id="@+id/textTab5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_semi_bold"
                    android:text="@string/news"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>